@@ -17,19 +17,18 @@ DO NOT MODIFIY - GENERATED CODE
   <artifactId>jruby-core</artifactId>
   <name>JRuby Core</name>
   <properties>
-    <version.ruby>2.4.1</version.ruby>
+    <version.ruby>2.5.0</version.ruby>
     <prawn.dir>${test.dir}/prawn</prawn.dir>
     <spec.tags.dir>${spec.dir}/tags</spec.tags.dir>
     <polyglot.dump.pom>pom.xml</polyglot.dump.pom>
     <pkg.dir>${build.dir}/pkg</pkg.dir>
     <spec.dir>spec</spec.dir>
     <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
-    <jruby.test.memory.permgen>2G</jruby.test.memory.permgen>
     <installer.gems>${jruby.win32ole.gem}</installer.gems>
     <prawn.git.repo>git://github.com/sandal/prawn.git</prawn.git.repo>
-    <version.ruby.minor>1</version.ruby.minor>
+    <version.ruby.minor>0</version.ruby.minor>
     <tzdata.version>2013d</tzdata.version>
-    <install4j.executable>/Applications/install4j 4/bin/install4jc</install4j.executable>
+    <install4j.executable>/Applications/install4j7/bin/install4jc</install4j.executable>
     <jay.bin>jay</jay.bin>
     <polyglot.dump.readonly>true</polyglot.dump.readonly>
     <dest.lib.dir>${lib.dir}</dest.lib.dir>
@@ -39,7 +38,7 @@ DO NOT MODIFIY - GENERATED CODE
     <rubyspec.1.8.dir>${rubyspec.dir}/1.8</rubyspec.1.8.dir>
     <jruby.launch.memory>1024M</jruby.launch.memory>
     <jruby.compile.memory>2G</jruby.compile.memory>
-    <version.ruby.major>2.4</version.ruby.major>
+    <version.ruby.major>2.5</version.ruby.major>
     <release.dir>release</release.dir>
     <create.sources.jar>false</create.sources.jar>
     <lib.dir>lib</lib.dir>
@@ -47,7 +46,7 @@ DO NOT MODIFIY - GENERATED CODE
     <parser.dir>core/src/main/java/org/jruby/parser</parser.dir>
     <jruby.basedir>${basedir}/..</jruby.basedir>
     <rubyspec.dir>${spec.dir}/ruby</rubyspec.dir>
-    <version.ruby.revision>58053</version.ruby.revision>
+    <version.ruby.revision>60928</version.ruby.revision>
     <jruby.test.memory>3G</jruby.test.memory>
     <mspec.dir>${spec.dir}/mspec</mspec.dir>
     <build.date>${maven.build.timestamp}</build.date>
@@ -102,7 +101,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-enxio</artifactId>
-      <version>0.16</version>
+      <version>0.17</version>
       <exclusions>
         <exclusion>
           <artifactId>jnr-ffi</artifactId>
@@ -124,7 +123,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-unixsocket</artifactId>
-      <version>0.17</version>
+      <version>0.19</version>
       <exclusions>
         <exclusion>
           <artifactId>jnr-ffi</artifactId>
@@ -135,7 +134,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-posix</artifactId>
-      <version>3.0.43</version>
+      <version>3.0.45</version>
       <exclusions>
         <exclusion>
           <artifactId>jnr-ffi</artifactId>
@@ -157,7 +156,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-ffi</artifactId>
-      <version>2.1.7</version>
+      <version>2.1.8</version>
     </dependency>
     <dependency>
       <groupId>com.github.jnr</groupId>
@@ -173,7 +172,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>org.jruby.joni</groupId>
       <artifactId>joni</artifactId>
-      <version>2.1.13</version>
+      <version>2.1.16</version>
     </dependency>
     <dependency>
       <groupId>org.jruby.extras</groupId>
@@ -183,7 +182,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>org.jruby.jcodings</groupId>
       <artifactId>jcodings</artifactId>
-      <version>1.0.26</version>
+      <version>1.0.30</version>
     </dependency>
     <dependency>
       <groupId>org.jruby</groupId>
@@ -585,7 +584,7 @@ DO NOT MODIFIY - GENERATED CODE
           <systemProperties>
             <jruby.home>${basedir}/..</jruby.home>
           </systemProperties>
-          <argLine>-Xmx${jruby.test.memory} -XX:MaxPermSize=${jruby.test.memory.permgen} -Dfile.encoding=UTF-8 -Djava.awt.headless=true</argLine>
+          <argLine>-Xmx${jruby.test.memory} -Dfile.encoding=UTF-8 -Djava.awt.headless=true</argLine>
           <includes>
             <include>org/jruby/test/MainTestSuite.java</include>
             <include>org/jruby/embed/**/*Test*.java</include>
